layout bug fixed

--- a/input.css
+++ b/input.css
@@ -53,7 +53,7 @@ html.dark body{
     }
 }
 .chartWrap{
-    width: calc(80% - 206px);
+    width: calc(85%);
 }
 .connectedWallet{
     background-color: rgb(239, 244, 245);
